--- a/beommul_cathedral/index.html
+++ b/beommul_cathedral/index.html
@@ -110,16 +110,46 @@
                 <a href="#" class="flex flex-center">미사시간</a>
             </div>
             <div class="tab__content">
-                <div class="tab__desc">
-                    <h1>tab1</h1>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
-                    </p>
+                <div class="tab__item flex">
+                    <div class="tab__desc">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    사제 성화의 날
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    본당의 날 작은 음악회
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    예비신자 환영식
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    청년 성서모임 그룹원 모집
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    12월 비대면 미사 안내
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    어린이 미사 반주자 모집
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="tab__img">
+                        <img src="./img/범물성당1.jpg" alt="">
+                    </div>
                 </div>
-                <div class="tab__desc">
+                <div class="tab__item">
                     <h1>tab2</h1>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
@@ -127,7 +157,7 @@
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
                     </p>
                 </div>
-                <div class="tab__desc">
+                <div class="tab__item">
                     <h1>tab3</h1>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
