--- a/1. Daegu-marathon/index.html
+++ b/1. Daegu-marathon/index.html
@@ -4,21 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
 <!-- CSS -->
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
-<!-- jQuery가 js 제일 상단에 위치 -->
+<!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <!-- JS -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<!-- 우리가 작성하는 js는 제일 아래 -->
 <script src="./js/script.js"></script>
-
-
 <title>대구국제마라톤</title>
 </head>
 <body>
@@ -124,7 +120,48 @@
     <!-- ========================= map section ========================= -->
     <section class="map main-inner">
         <h2 class="main-title">코스안내</h2>
-        <img src="./img/marathon_masters_health.jpg" alt="건강달리기코스안내" class="section__margin">
+        <div class="map__img flex">
+            <img src="./img/marathon_masters_health.jpg" alt="건강달리기코스안내지도">
+            <img src="./img/marathon_map_10km.jpg" alt="10km코스안내지도">
+        </div>
+    </section>
+    <!-- ========================= notice section ========================= -->
+    <section class="notice">
+        <div class="notice__container flex">
+            <div class="notice__desc">
+                <h2>자주 묻는 질문</h2>
+                <ul>
+                    <li>
+                        <a href="#">
+                            개인인증을 할 수 없으면 참가 접수가 안되나요?
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            단체접수는 가능 한가요?
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            오프라인대회는 어떻게 참가합니까?
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            기록은 어떻게 측정합니까?
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            기념품과 배번호는 어떻게 되나요?
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="notice__video">
+                <video src="./img/video-marathon.mp4" autoplay muted loop></video>
+            </div>
+        </div>
     </section>
     <!-- ========================= footer ========================= -->
     <footer class="footer" id="footer">
@@ -142,9 +179,5 @@
         </span>
     </footer>
 </div>
-
-    <!-- <div id="arrowUp" class="flex-center">
-        <i class="uil uil-arrow-up"></i>
-    </div> -->
 </body>
 </html>
